Version avec corrections et version mobile du site

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
 }
 
+
 :root {
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
@@ -14,6 +15,17 @@
     color: var(--main-color);
 }
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
+.main-container {
+    width: 100%;
+    max-width: 1440px;
+    padding: 0 50px;
+    box-sizing: border-box;
+}
 
 /* Navigation block */
 .navigation{
@@ -50,7 +62,8 @@
     padding-top: 16px;
 }
 
-/* Search block */
+/**** Search block ****/
+
 .search-title h1{
     font-size: 22px;
     margin-bottom: 8px;
@@ -110,20 +123,18 @@
     cursor: pointer;
 }
 
-/* Filter block */
-
-.label-filters {
-    flex-wrap: nowrap;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.buttons-filter {
+/**** Filter block ****/
+.filters {
     display: flex;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     align-items: center;
     gap: 10px;
     margin-bottom: 35px;
+}
+
+.label-filters {
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .button-filter {
@@ -132,8 +143,8 @@
     border: 2px solid #F2F2F2;
     border-radius: 25px;
     font-weight: bold;
-    flex-wrap: wrap;
 }
+
 .button-filter i {
     margin-right: 10px;
     font-size: 22px;
@@ -147,6 +158,7 @@
 /***** Text info ******/
 .info {
     display: flex;
+    align-items: center;
     font-size: 16px;
     margin-bottom: 35px;
 }
@@ -160,18 +172,6 @@
     justify-content: center;
     width: 24px; 
     height: 24px; 
-}
-
-body {
-    display: flex;
-    justify-content: center;
-}
-
-.main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 50px;
-    box-sizing: border-box;
 }
 
 a {
@@ -338,27 +338,34 @@ a {
 
 #activites {
     border-radius: 20px;
-    padding: 30px;
+    padding: 25px;
     box-sizing: border-box;
     width: 100%;
     height: 560px;
+}
+
+.activites-title {
+    display: block; 
+    justify-content: space-between;
+    align-items: center;
 }
 
 .activites-cards {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100%;
+    height: 95%;
     gap: 15px;
 }
 
 .activites-cards a{
     display: flex;
-    width: 298px;
-    height: 439px;
+    width: 23%;
+    height: 80%;
     border-radius: 20px;
     transition: 0.3s;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   
 }
 
 .activites-cards a:hover{
@@ -368,6 +375,7 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
 }
 .activites-cards img{
     width: 100%;
@@ -378,35 +386,30 @@ a {
 }
 
 .activites-cards .affiche-txt {
-    font-size: 14px;
-    margin-top: 10px;
-    margin-left: 20px;
+    font-size: 12px;
+    margin-left: 10px;
+    padding: 10px;
 }
-
-.activites-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+ 
 /***** footer *****/
-
 .information {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     background-color: var(--main-bg-color);
     font-size: 14px;
+    padding: 15px 0px 20px 10px;
+    gap: 15px;
 }
 
-.information .card-info {
+.card-info {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     width: 30%;
-    padding: 20px;
-    text-align: left;
 }
 
-.information .card-info a {
+.card-info a {
     margin-top: 10px;
 }
 
@@ -418,6 +421,9 @@ a {
     #hebergements-and-populaires {
         flex-direction: column; 
         flex-wrap: wrap;
+    }
+    .label-filters {
+        flex-basis: 100%;
     }
 
     .hebergements {
@@ -446,12 +452,24 @@ a {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    #activites{
+        height: 350px;
+    }
+
+    .activites-cards img {
+        height: 75%;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
     /* ... */
-    
+  
+    .main-container {
+        padding: 0;
+    }
+ 
     .navigation{
         display: flex;
         flex-direction: column;
@@ -461,7 +479,7 @@ a {
     }
 
     .nav-links {
-        width: 130%;
+        width: 100%;
         gap: 5px;     
     }
 
@@ -477,10 +495,14 @@ a {
         border-bottom: 2px solid var(--main-color);
     }
 
+    .search {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
     .lookup-form{
         margin-bottom: 40px;
         justify-content: flex-start;
-        width: 335px;
+        width: 90%;
     }
 
     .lookup-button{   
@@ -501,5 +523,82 @@ a {
         font-size: 18px;
         color: white;
     }
+    
+    .button-filter {
+        min-width: 45%;
+        padding: 4px 12px;
+        flex-wrap: nowrap;
+        gap: 10px;
+        text-align: left;
+    }
+
+    .info {
+        margin-bottom: 0;
+    }
+
+    .populaires-cards{
+        flex-flow: wrap column;
+        justify-content: ;
+    }
+
+    .populaires-cards a {
+        width: 100%;
+    }
+
+    .populaires-cards .card{
+        margin-top: 20px;
+    }
+
+    #hebergements-and-populaires{
+        flex-flow: wrap column-reverse;
+        border-radius: 0;
+    }
+
+    #hebergements-and-populaires section {
+        border-radius: 0;
+
+    }
+    #hebergements-and-populaires .hebergements{
+        flex-flow: wrap column;
+        width: 100%;
+        background-color: white;
+    }
+
+    .hebergements-cards{
+        flex-flow: wrap column;
+    }
+    .hebergements-cards img{
+        height: 60%;
+    }
+
+    /**** Activites for small devices ****/
+    #activites{
+        display: flex;
+        flex-flow: column;
+        height: 100%;
+        border-radius: 0;
+    }
+
+    .activites-cards {
+        flex-flow: column;
+          }
+    .activites-cards a {
+        width: 95%;
+        height: 200px;
+        margin-top: 15px;
+    }
+
+
+    /**** Footer for small devices*****/
+    .information {
+        flex-direction: column;
+        gap: 60px; 
+    }
+
+    .card-info{
+        margin-left: 20px;
+        width: 100%;
+    }
+
 
 }
